--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1 class="display-2 heading fw-bold">
               Hey there,<br /><span class="display-1"> I'm Evans </span>
             </h1>
-            <p class="intro-text"> Artificial Intelligence Enthusiast <span class="display-6 mx-1">&</span><br> Undergraduate Student Reasearcher </AI></p>
+            <p class="intro-text"> Artificial Intelligence Enthusiast <span class="display-6 mx-1">&</span><br> Undergraduate Student Researcher </AI></p>
             <div class="read-contact d-flex align-items-center justify-content-end anim-one">
               <button class="btn-read d-flex align-items-center justify-content-center fw-bold text-center"><a href="#about" role="button"
                 >Read More</a
