--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
       <section
         class="main container-fluid d-flex align-items-center justify-content-center flex-column unique"
         id="about"
-        style="border: 2px solid red"
       >
         <div class="container next-one two">
           <p class="text-left fw-bold">Profile</p>
@@ -185,9 +184,46 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-12">
+                  <div class="col-md-12 anim-one">
                     <div class="row">
-                      <div class="col-12">
+                      <div class="col-md-12 mt-2">
+                        <h6
+                          class="m-1 fs-4 mt-2 achievy"
+                          style="color: #003153"
+                        >
+                          Research Interests
+                        </h6>
+                        <ul
+                          class="des listing"
+                          style="
+                            border: 2px solid #023d675a;
+                            border-radius: 4px;
+                          "
+                        >
+                          <li class="mt-2 mb-2 me-2">
+                            Internet of Things (IoT)
+                          </li>
+                          <li class="mt-2 mb-2 me-2">
+                            Artificial Intelligence
+                          </li>
+                          <li class="mt-2 mb-2 me-2">Big Data</li>
+                          <li class="mt-2 mb-2 me-2">Cybersecurity</li>
+                          <li class="mt-2 mb-2 me-2">
+                            Software-Defined Networking (SDN)
+                          </li>
+                          <li class="mt-2 mb-2 me-2">
+                            Data and Wireless Communication
+                          </li>
+                          <li class="mt-2 mb-2 me-2">
+                            Reconfigurable Intelligent Surfaces
+                          </li>
+                          <li class="mt-2 mb-2 me-2">5G and Beyond</li>
+                          <li class="mt-2 mb-2 me-2">Signal Processing</li>
+                        </ul>
+                      </div>
+
+                      <div class="w-100"></div>
+                      <!-- <div class="col-12">
                         <div class="row">
                           <div class="col-md-1"></div>
                           <div class="col-md-10 thishere anim-one">
@@ -207,17 +243,51 @@
                           </div>
                           <div class="col-md-1 mb-3"></div>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="row">
+                  <div class="col-md-12 anim-one">
+                    <h6 class="m-1 fs-4 mt-2 achievy" style="color: #003153">
+                      Research
+                    </h6>
+                    <ul
+                      class="des listing"
+                      style="border: 2px solid #023d675a; border-radius: 4px"
+                    >
+                      <li class="mt-2 mb-2 me-2">
+                        <b>Undegraduate Thesis: </b>Undegraduate Thesis: A
+                        Transformer-Based Deep Q Learning Approach for Dynamic
+                        Load Balancing in Software-Defined Networking (SDN)
+                        <a
+                          href="./research.html"
+                          style="text-decoration: underline"
+                          >Read More.</a
+                        >
+                      </li>
+                      <li class="mt-2 mb-2 me-2">
+                        <b>Ongoing Project:</b> Enhancing Teaching and Learning
+                        at KNUST through Sociopsychological Evaluation of
+                        Students Using Artificial Intelligence.
+                      </li>
+                      <li class="mt-2 mb-2 me-2">
+                        <b>Research Intern:</b>
+                        <a
+                          href="https://www.siscodegh.com/"
+                          class="these"
+                          target="_blank"
+                          >SISCODE</a
+                        >, Accra - Ghana.
+                      </li>
+                    </ul>
+                  </div>
                   <div class="col-md-12">
                     <div class="row">
                       <div class="col-md-6 col-lg-6 anim-one">
-                        <h6 class="fs-4" style="color: #003153">Tools</h6>
+                        <h6 class="fs-4" style="color: #003153">Libraries</h6>
                         <ul
                           class="des listing"
                           style="
@@ -232,7 +302,7 @@
                           <li class="me-2 mb-2">TensorFlow</li>
                         </ul>
                       </div>
-                      <div class="col-md-5 col-lg-4 anim-one">
+                      <div class="col-md-6 col-lg-4 anim-one">
                         <h6 class="fs-4" style="color: #003153">Languages</h6>
                         <ul
                           class="des listing"
@@ -244,29 +314,22 @@
                           <li class="me-2 mt-2">Python</li>
                           <li class="me-2 mb-2">R</li>
                         </ul>
+                        <div class="w-100"></div>
+                        <h6 class="fs-4" style="color: #003153">Tools</h6>
+                        <ul
+                          class="des listing"
+                          style="
+                            border: 2px solid #023d675a;
+                            border-radius: 4px;
+                          "
+                        >
+                          <li class="me-2 mt-2">Google Colab</li>
+                          <li class="me-2 mb-2">Visual Studio Code</li>
+                        </ul>
                       </div>
-                      <div class="col-md-1 col-lg-2"></div>
                     </div>
                   </div>
-                  <div class="col-md-12 anim-one">
-                    <h6 class="m-1 fs-4 mt-2 achievy" style="color: #003153">
-                      Research
-                    </h6>
-                    <ul
-                      class="des listing"
-                      style="border: 2px solid #023d675a; border-radius: 4px"
-                    >
-                      <li class="mt-2 mb-2 me-2">
-                        Research Intern at
-                        <a
-                          href="https://www.siscodegh.com/"
-                          class="these"
-                          target="_blank"
-                          >SISCODE</a
-                        >, Accra - Ghana.
-                      </li>
-                    </ul>
-                  </div>
+
                   <div class="col-md-12 achievy mt-2 anim-one">
                     <h6 class="mt-1 fs-4" style="color: #003153">
                       Achievements
