--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <link rel="icon" href="Images/e.svg" />
     <title>Evans Tetteh Owusu</title>
   </head>
-  <body>
+  <body onload="myFunction()">
     <!-- onload="myFunction() -->
     <!--Preloader-->
-    <!-- <div class="preloader"></div> -->
+    <div class="preloader"></div>
     <!--Header-->
     <header class="container-fluid p-0 fixed-top">
       <a
@@ -264,7 +264,7 @@
                         Load Balancing in Software-Defined Networking (SDN)
                         <a
                           href="./research.html"
-                          style="text-decoration: underline"
+                          style="text-decoration: underline; color: #003153"
                           >Read More.</a
                         >
                       </li>
@@ -280,7 +280,7 @@
                           class="these"
                           target="_blank"
                           >SISCODE</a
-                        >, Accra - Ghana.
+                        >, Accra, Ghana.
                       </li>
                     </ul>
                   </div>
@@ -323,8 +323,8 @@
                             border-radius: 4px;
                           "
                         >
-                          <li class="me-2 mt-2">Google Colab</li>
-                          <li class="me-2 mb-2">Visual Studio Code</li>
+                          <li class="me-2 mt-2">MATLAB</li>
+                          <li class="me-2 mb-2">Power Bi</li>
                         </ul>
                       </div>
                     </div>
@@ -754,7 +754,7 @@
                 Address &nbsp;<i class="fa-solid fa-location-dot"></i>
               </h4>
               <p class="this">
-                AK-664-5064,<br />
+                AK-664-4783,<br />
                 Atonsu - Kumasi,<br />
                 Ashanti, Ghana.
               </p>
