--- a/research.html
+++ b/research.html
@@ -14,6 +14,21 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="Images/e.svg" />
     <title>Evans Tetteh Owusu</title>
+    <style>
+      .abstract {
+        margin-top: 50px;
+        background-color: whitesmoke;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+      }
+      /* Effect on preloader */
+      header,
+      main,
+      footer {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <header class="container-fluid p-0 fixed-top">
@@ -28,7 +43,7 @@
       </a>
       <nav class="container navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand mx-1 my-0 p-0" href="#"
+          <a class="navbar-brand mx-1 my-0 p-0" href="./"
             ><img class="new-img" src="Images/logo-2.png"
           /></a>
           <button
@@ -47,22 +62,25 @@
           <div class="collapse navbar-collapse mx-2" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link mx-2 active" aria-current="page" href="#home"
+                <a
+                  class="nav-link mx-2 active"
+                  aria-current="page"
+                  href="./index.html#home"
                   ><i class="fa-solid fa-house links"></i>Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-2" href="./index.html"
+                <a class="nav-link mx-2" href="./index.html#about"
                   ><i class="fa-solid fa-user links"></i>About</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-2" href="#projects"
+                <a class="nav-link mx-2" href="./index.html#projects"
                   ><i class="fa-solid fa-laptop-file links"></i>Projects</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-2" href="#contacts"
+                <a class="nav-link mx-2" href="./index.html#contacts"
                   ><i class="fa-solid fa-phone links"></i>Contact</a
                 >
               </li>
@@ -73,143 +91,59 @@
     </header>
     <main>
       <section
-        class="container-fluid main d-flex align-items-center justify-content-between flex-column unique"
+        class="container abstract d-flex align-items-center justify-content-between flex-column"
         id="home"
       >
-        <div class="next-top my-3"></div>
-        <div class="row fist container p-0">
-          <div class="row-first col-md-6 flex-column" style="height: auto">
-            <h1 class="display-2 heading fw-bold">
-              Hey there,<br /><span class="display-1"> I'm Evans </span>
-            </h1>
-            <p class="intro-text">
-              Artifi<title>Document</title>cial Intelligence Enthusiast
-              <span class="display-6 mx-1">&</span><br />
-              Graduate Student Researcher
-            </p>
+        <div class="row m-4">
+          <div class="col-12 col-sm-0 col-md-1 col-lg-2"></div>
+          <div class="col-12 col-sm-0 col-md-10 col-lg-8">
             <div
-              class="read-contact d-flex align-items-center justify-content-end anim-one"
+              class="main-text mt-0 mt-md-0 mt-sm-0 p-3 p-md-0 p-sm-0"
+              style="border: 2px solid rgba(0, 0, 0, 0.774)"
             >
-              <button
-                class="btn-read d-flex align-items-center justify-content-center fw-bold text-center"
-              >
-                <a href="#about" role="button">Read More</a>
-              </button>
-              <button
-                class="btn-contact d-flex align-items-center justify-content-center fw-bold"
-              >
-                <a href="#contacts" role="button">Contact Me</a>
-              </button>
+              <h3 class="main-topic text-center p-3" style="color: black">
+                A TRANSFORMER-BASED DEEP Q LEARNING APPROACH FOR DYNAMIC LOAD
+                BALANCING IN SOFTWARE-DEFINED NETWORKS (SDNs)
+              </h3>
+              <hr style="height: 4px; background: black; opacity: 1" />
+              <h5 class="sub-topic p-3 m-0">Research Summary</h5>
+              <p class="abstract-description mt-0 p-3">
+                This study proposes a novel approach for dynamic load balancing
+                in Software-Defined Networks (SDNs) using a Transformer-based
+                Deep Q-Network (DQN). Traditional load balancing mechanisms,
+                such as Round Robin (RR) and Weighted Round Robin (WRR), are
+                static and often struggle to adapt to fluctuating traffic
+                conditions, leading to inefficiencies in network performance. In
+                contrast, SDNs offer centralized control and flexibility,
+                providing an ideal platform for implementing machine
+                learning-driven optimization strategies. The core of this
+                research combines a Temporal Fusion Transformer (TFT) for
+                accurate traffic prediction with a DQN model to perform
+                real-time dynamic load balancing. The TFT model predicts future
+                traffic loads, which the DQN uses as input, allowing it to make
+                intelligent routing decisions that optimize throughput, minimize
+                latency, and reduce packet loss. The proposed model was tested
+                against RR and WRR in simulated environments with varying data
+                rates, and the results demonstrate significant improvements in
+                network performance. For the 500MB data rate, the DQN model
+                achieved an average throughput of 0.275 compared to 0.202 and
+                0.205 for RR and WRR, respectively. Additionally, the DQN
+                recorded lower average latency and packet loss. In the 1000MB
+                simulation, the DQN model outperformed the traditional methods
+                in throughput, latency, and packet loss, reinforcing its
+                effectiveness in managing network loads dynamically. This
+                research presents an important step towards enhancing network
+                performance through the integration of machine learning models
+                within SDNs, potentially paving the way for more adaptive,
+                intelligent network management systems.
+              </p>
             </div>
           </div>
-          <div class="col-md-6 img-container">
-            <div
-              class="overlay d-flex align-items-center justify-content-center"
-            >
-              <img src="Images/main-profile.jpeg" alt="" class="img-fluid" />
-            </div>
-          </div>
-        </div>
-        <div
-          class="next container-fluid p-0 m-0 d-flex align-items-center justify-content-between"
-        >
-          <div class="down"></div>
-          <div class="down"></div>
-          <div class="down"></div>
+          <div class="col-12 col-sm-0 col-md-1 col-lg-2"></div>
         </div>
       </section>
     </main>
-    <footer>
-      <!--Last section in the footer-->
-      <section
-        class="container-fluid d-flex align-items-center justify-content-between flex-column unique"
-        id="footer"
-      >
-        <div class="container next-new mt-3 two" id="contacts">
-          <p class="text-left fw-bold mt-4 get-int" style="color: #85d0d6">
-            Get in touch
-          </p>
-        </div>
-        <div
-          class="container anim-one"
-          style="border-top: 2px solid rgba(16, 170, 170, 0.263)"
-        >
-          <div class="row">
-            <div class="col-md-4 all-inv">
-              <h4 class="get-into mt-4">
-                Address &nbsp;<i class="fa-solid fa-location-dot"></i>
-              </h4>
-              <p class="this">
-                AK-664-5064,<br />
-                Atonsu - Kumasi,<br />
-                Ashanti, Ghana.
-              </p>
-            </div>
-            <div class="col-md-4 all-inv">
-              <div class="col-md-12">
-                <h4 class="get-into mt-4">
-                  Message &nbsp;<i class="fa-solid fa-envelope"></i>
-                </h4>
-                <p class="this">
-                  <a href="mailto:oturempong@proton.me" class="this social-link"
-                    >otubrempong@proton.me</a
-                  ><br />
-                  <a
-                    href="mailto:otubrempong5@gmail.com"
-                    class="this social-link"
-                    >otubrempong5@gmail.com</a
-                  >
-                </p>
-              </div>
-              <div class="col-md-12">
-                <h4 class="get-into mt-4">
-                  Phone &nbsp;<i class="fa-solid fa-phone"></i>
-                </h4>
-                <p class="this">
-                  <a href="tel:233592429966" class="this social-link"
-                    >+233 (0)592429966</a
-                  ><br />
-                  <a href="tel:233208796872" class="this social-link"
-                    >+233 (0)208796872</a
-                  >
-                </p>
-              </div>
-            </div>
-            <div class="col-md-4 all-inv">
-              <h4 class="get-into mt-4">Let's connect !</h4>
-              <div class="socials this">
-                <a
-                  href="https://www.linkedin.com/in/evans-owusu-827b52215?trk=contact-info"
-                  class="this social-link"
-                  target="_blank"
-                  ><i class="fa-brands fa-linkedin-in fa-x"></i>&nbsp
-                  LinkedIn</a
-                ><br />
-                <a
-                  href="https://www.instagram.com/otubrempong"
-                  class="this social-link"
-                  target="_blank"
-                  ><i class="fa-brands fa-instagram"></i>&nbsp Instagram</a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid last mt-3">
-          <div class="container copys">
-            <p class="mt-3">
-              Designed & Developed by
-              <a
-                class="social-link"
-                href="https://github.com/workitoutsilas/Evans_PW"
-                target="_blank"
-                >workitoutsilas</a
-              >
-            </p>
-          </div>
-        </div>
-      </section>
-    </footer>
+
     <script src="Bootstrap/bootstrap.min.js"></script>
     <script src="Bootstrap/jquery.min.js"></script>
     <script src="script.js"></script>
