--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
         class="container-fluid main d-flex align-items-center justify-content-between flex-column unique"
         id="home"
       >
-        <div class="next-top my-3"></div>
+        <div class="next-top my-2"></div>
         <div class="row fist container p-0">
           <div class="row-first col-md-6 flex-column" style="height: auto">
-            <h1 class="display-2 heading fw-bold">
+            <h1 class="display-2 heading fw-bold" id="typewriter">
               Hey there,<br /><span class="display-1"> I'm Evans </span>
             </h1>
-            <p class="intro-text">
-              Artificial Intelligence Enthusiast
-              <span class="display-6 mx-1">&</span><br />
+            <h3 class="intro-text">
+              Artificial Intelligence Enthusiast<br />
+              <span class="display-6 mx-1">&</span>
               Graduate Student Researcher
-            </p>
+            </h3>
             <div
               class="read-contact d-flex align-items-center justify-content-end anim-one"
             >
@@ -148,7 +148,7 @@
                           src="Images/img-1.jpg"
                           style="float: left"
                           style="border: 2px solid #023d675a"
-                          alt=""
+                          alt="Photo"
                         />
                       </div>
                       <p class="des mt-2 mx-2">
@@ -158,7 +158,7 @@
                         <br />At the beginning of my quest to be a problem
                         solver using contemporary technology, artificial
                         intelligence was the primary point, so I engaged in
-                        self-teaching with it. I earned a BSc. in
+                        self-teaching with it. I earned a BSc. degree in
                         Telecommunication Engineering, graduating in 2024 with
                         First Class Honors at KNUST.
                       </p>
@@ -330,10 +330,8 @@
                     </div>
                   </div>
 
-                  <div class="col-md-12 achievy mt-2 anim-one">
-                    <h6 class="mt-1 fs-4" style="color: #003153">
-                      Achievements
-                    </h6>
+                  <div class="col-md-12 achievy anim-one">
+                    <h6 class="fs-4" style="color: #003153">Achievements</h6>
                     <p class="des">
                       Click on &nbsp<i class="fa-solid fa-copy fa-1x"></i> &nbsp
                       to copy Cert. no. for verification.
@@ -824,8 +822,8 @@
         </div>
       </section>
     </footer>
-    <script src="Bootstrap/bootstrap.min.js"></script>
-    <script src="Bootstrap/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script defer src="Bootstrap/bootstrap.min.js"></script>
+    <script defer src="Bootstrap/jquery.min.js"></script>
+    <script defer src="script.js"></script>
   </body>
 </html>
