--- a/research.html
+++ b/research.html
@@ -15,17 +15,12 @@
     <link rel="icon" href="Images/e.svg" />
     <title>Evans Tetteh Owusu</title>
     <style>
-      .abstract {
-        margin-top: 50px;
+      body {
+        overflow: hidden;
         background-color: whitesmoke;
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
       }
-      /* Effect on preloader */
       header,
-      main,
-      footer {
+      main {
         display: block;
       }
     </style>
@@ -89,61 +84,69 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="container-fluid p-0">
       <section
         class="container abstract d-flex align-items-center justify-content-between flex-column"
         id="home"
       >
-        <div class="row m-4">
-          <div class="col-12 col-sm-0 col-md-1 col-lg-2"></div>
-          <div class="col-12 col-sm-0 col-md-10 col-lg-8">
-            <div
-              class="main-text mt-0 mt-md-0 mt-sm-0 p-3 p-md-0 p-sm-0"
-              style="border: 2px solid rgba(0, 0, 0, 0.774)"
-            >
-              <h3 class="main-topic text-center p-3" style="color: black">
+        <div class="row main-row">
+          <div class="col-12 col-xs-0 col-sm-0 col-md-0 col-lg-2"></div>
+
+          <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-8">
+            <div class="main-text mt-4 p-xs-0 p-sm-0 p-md-2 p-lg-3">
+              <h3
+                class="main-topic text-left p-xs-2 p-sm-3 p-md-3 p-lg-3"
+                style="color: black"
+              >
                 A TRANSFORMER-BASED DEEP Q LEARNING APPROACH FOR DYNAMIC LOAD
                 BALANCING IN SOFTWARE-DEFINED NETWORKS (SDNs)
               </h3>
               <hr style="height: 4px; background: black; opacity: 1" />
-              <h5 class="sub-topic p-3 m-0">Research Summary</h5>
-              <p class="abstract-description mt-0 p-3">
-                This study proposes a novel approach for dynamic load balancing
-                in Software-Defined Networks (SDNs) using a Transformer-based
-                Deep Q-Network (DQN). Traditional load balancing mechanisms,
-                such as Round Robin (RR) and Weighted Round Robin (WRR), are
-                static and often struggle to adapt to fluctuating traffic
-                conditions, leading to inefficiencies in network performance. In
-                contrast, SDNs offer centralized control and flexibility,
-                providing an ideal platform for implementing machine
-                learning-driven optimization strategies. The core of this
-                research combines a Temporal Fusion Transformer (TFT) for
-                accurate traffic prediction with a DQN model to perform
-                real-time dynamic load balancing. The TFT model predicts future
-                traffic loads, which the DQN uses as input, allowing it to make
-                intelligent routing decisions that optimize throughput, minimize
-                latency, and reduce packet loss. The proposed model was tested
-                against RR and WRR in simulated environments with varying data
-                rates, and the results demonstrate significant improvements in
-                network performance. For the 500MB data rate, the DQN model
-                achieved an average throughput of 0.275 compared to 0.202 and
-                0.205 for RR and WRR, respectively. Additionally, the DQN
-                recorded lower average latency and packet loss. In the 1000MB
-                simulation, the DQN model outperformed the traditional methods
-                in throughput, latency, and packet loss, reinforcing its
-                effectiveness in managing network loads dynamically. This
-                research presents an important step towards enhancing network
-                performance through the integration of machine learning models
-                within SDNs, potentially paving the way for more adaptive,
-                intelligent network management systems.
-              </p>
+              <h5 class="sub-topic p-xs-1 p-sm-2 p-md-3 p-lg-3 m-0">
+                Research Summary
+              </h5>
+              <div class="overflow-container">
+                <div class="overflow my-2">
+                  <p class="abstract-description px-2">
+                    This study proposes a novel approach for dynamic load
+                    balancing in Software-Defined Networks (SDNs) using a
+                    Transformer-based Deep Q-Network (DQN). Traditional load
+                    balancing mechanisms, such as Round Robin (RR) and Weighted
+                    Round Robin (WRR), are static and often struggle to adapt to
+                    fluctuating traffic conditions, leading to inefficiencies in
+                    network performance. In contrast, SDNs offer centralized
+                    control and flexibility, providing an ideal platform for
+                    implementing machine learning-driven optimization
+                    strategies. The core of this research combines a Temporal
+                    Fusion Transformer (TFT) for accurate traffic prediction
+                    with a DQN model to perform real-time dynamic load
+                    balancing. The TFT model predicts future traffic loads,
+                    which the DQN uses as input, allowing it to make intelligent
+                    routing decisions that optimize throughput, minimize
+                    latency, and reduce packet loss. The proposed model was
+                    tested against RR and WRR in simulated environments with
+                    varying data rates, and the results demonstrate significant
+                    improvements in network performance. For the 500MB data
+                    rate, the DQN model achieved an average throughput of 0.275
+                    compared to 0.202 and 0.205 for RR and WRR, respectively.
+                    Additionally, the DQN recorded lower average latency and
+                    packet loss. In the 1000MB simulation, the DQN model
+                    outperformed the traditional methods in throughput, latency,
+                    and packet loss, reinforcing its effectiveness in managing
+                    network loads dynamically. This research presents an
+                    important step towards enhancing network performance through
+                    the integration of machine learning models within SDNs,
+                    potentially paving the way for more adaptive, intelligent
+                    network management systems.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-12 col-sm-0 col-md-1 col-lg-2"></div>
+          <div class="col-12 col-xs-0 col-sm-0 col-md-0 col-lg-2"></div>
         </div>
       </section>
     </main>
-
     <script src="Bootstrap/bootstrap.min.js"></script>
     <script src="Bootstrap/jquery.min.js"></script>
     <script src="script.js"></script>
